Fix code style on iOS

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -60,3 +60,11 @@ h1.post-title {
 .pagination-link {
     color: #8cc2dd;
 }
+
+code {
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
